--- a/style.css
+++ b/style.css
@@ -1,11 +1,41 @@
 body{
     background-color: lightgreen;
-    text-align: center;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 h1{
-    display: inline-block;
-    width: 170px;
-    background-color: white;
+    position: absolute;
+    margin-bottom: 400px;
+    font-size: 45px;
+}
+.digit{
+    font-size: 80px;
+    font-weight: bold;
+}
+.text{
+    font-size: 40px;
+    font-weight: bold;
+}
+#btn-container{
+    text-align: center;
+    margin-top: 40px;
+}
+.btn{
+    padding: 7px 25px;
+    font-size: 15px;
+    margin:0px 10px ;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+#start{
+    background-color: lightgreen;
+}
+#stop{
+    background-color: lightblue;
+}
+#reset{
+    background-color: rgb(199, 108, 108);
 }
